--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mariadb-10.4 (1:10.4.1-1) UNRELEASED; urgency=medium
+
+  * Introduce MariaDB 10.4 to Debian
+
+ -- Otto Kekäläinen <otto@debian.org>  Sat, 08 Feb 2020 18:52:34 +0200
+
 mariadb-10.3 (1:10.3.22-1) unstable; urgency=medium
 
   [ Otto Kekäläinen ]
