--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mariadb-10.4 (1:10.4.12-1~exp2) UNRELEASED; urgency=medium
+
+  * Open new changelog entry. This will be replaced with `gbp dch -vR`.
+
+ -- Otto Kekäläinen <otto@debian.org>  Thu, 27 Feb 2020 20:07:39 +0200
+
 mariadb-10.4 (1:10.4.12-1~exp1) experimental; urgency=medium
 
   * New upstream version 10.4.12
