--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mariadb-10.4 (1:10.4.12-1) UNRELEASED; urgency=medium
+
+  * Open new changelog entry. This will be replaced with `gbp dch -vR`.
+
+ -- Otto Kekäläinen <otto@debian.org>  Tue, 17 Mar 2020 20:59:17 +0200
+
 mariadb-10.4 (1:10.4.12-1~exp2) experimental; urgency=medium
 
   [ Christian Göttsche ]
